istio-manifests/Gateway.yaml
# gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rgrpc
  namespace: rgrpc-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "dev.api.baidu.com"
