istio-manifests/VirtualService.yaml
# virtual service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rgrpc
  namespace: rgrpc-dev
spec:
  hosts:
    - "dev.api.baidu.com"
  gateways:
    - rgrpc
  http:
    - match:
        - uri:
            prefix: /permission
      route:
        - destination:
            port:
              number: 80
            host: permission
